infrastructure/config/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: 192.168.2.160
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.bsdserver.nl
      secretName: keycloak-tls
  rules:
    - host: keycloak.bsdserver.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
